  - Added some more FAQ entries (regarding logging and IRC operators).
  - Allow IRC operators to overwrite channel limits.
  - Support for enhanced PRIVMSG and NOTICE message targets.
  - More tests have been added to the test-suite ("make check"), and two
    servers are started for testing server-server linking.
  - Added a timestamp to log messages to the console.

ngIRCd 0.12.1 (2008-07-09)

  - Allow mixed line terminations (CR+LF/CR/LF) in non-RFC-compliant mode
  - Don't allow stray \r or \n in command parameters
  - --configtest: return non-zero exit code if there are errors
  - Update ngIRCd manual pages
  - Add option aliases -V (for --version) and -h (for --help).
  - Fix 'no-ipv6' compile error.
  - Make Listen parameter a comma-seperated list of addresses. This also
    obsoletes ListenIPv4 and ListenIPv6 options. If Listen is unset, it
    is treated as Listen="::,0.0.0.0".
    Note: ListenIPv4 and ListenIPv6 options are still recognized,
    but ngircd will print a warning if they are used in the config file.

ngIRCd 0.12.0 (2008-05-13)

  - Fix Bug: 85: "WHO #SecretChannel" that user is not a member of now returns
    proper RPL_ENDOFWHO_MSG instead of nothing. (Ali Shemiran)
  - Fix complie on FreeBSD 5.4 and AIX.
  - If bind() fails, also print ip address and not just the port number.

  ngIRCd 0.12.0-pre2 (2008-04-29)
  - IPv6: Add config options to disabe ipv4/ipv6 support.
  - Don't include doc/CVS.txt in distribution archive, use doc/GIT.txt now!
  - Documentation: get rid of some more references to CVS, switch to GIT.
  - Get rid of cvs-version.* and CVSDATE definition.
  - Report ERR_NOTONCHANNEL when trying to part a channel one is not member of.
  - Testsuite: remove erroneous ConfUID setting in config file.

  ngIRCd 0.12.0-pre1 (2008-04-20)
  - Include Mac OS X Xcode project in distribution archives.
  - Do not exit on SIGHUP or /REHASH if the config file cannot opened.
  - Add IPv6 support.