@@ -122,6 +122,10 @@
 	# Don't do any DNS lookups when a client connects to the server.
 	;NoDNS = no
 
+	# Don't do any IDENT lookups, even if ngIRCd has been compiled
+	# with support for it.
+	;NoIdent = no
+
 	# try to connect to other irc servers using ipv4 and ipv6, if possible
 	;ConnectIPv6 = yes
 	;ConnectIPv4 = yes
